...
                    Modifier
                        .toggleable(
                            value = selected,
                            role = Role.Checkbox,
                            onValueChange = { onClick() },
                        )
                        .testTag("file_picker_selection_checkbox")
                } else {
                    Modifier.clickable(role = Role.Button, onClick = onClick)
                },
            ),
        headlineContent = {
            Text(
...
